# AutomaticUAT

./: README.md  pyproject.toml
experiment/AGORA group/: GPT p1 Tabella.docx  GPT p2 Tabella.docx  GPT p3 Tabella.docx
experiment/AGORA group/english_version/: GPT p1 Table.docx  GPT p2 Table.docx  GPT p3 Table.docx
experiment/control group/: TA_Partecipante1.docx  TA_Partecipante2.docx  TA_Partecipante3.docx
experiment/control group/english_version/: TA_Participant1.docx  TA_Participant2.docx  TA_Participant3.docx
experiment/oracle/: Tabelle e questionario esperimento.xlsx
experiment/oracle/english_version/: Tables and questionnaire.xlsx
experiment/use cases/: K01720.UCR.01_en.docx
prompt examples/: Long_UC.docx  Prompt_1.docx
uat/: prompt.py  prompt_en.py  uatApp.py  uatLogic.py
